# pystackt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README.md  _config.yml  export_functions.md  extract_functions.md
docs/_includes/: head-custom.html  header.html
docs/_layouts/: default.html
docs/content/explained/: pystackt_design.md
docs/content/howto/: view_duckdb_files.md
docs/content/reference/exploration/: create_statistics_views.md
docs/content/reference/export/: export_to_promg.md
docs/content/reference/extract/: get_github_log.md  github_OCED.md
docs/content/tutorials/: tutorial_extracting_OCED.md
docs/exploration/: create_statistics_views.md  interactive_data_visualization_app.md
docs/export/: export_to_ocel2.md  export_to_promg.md
docs/exporters/: overview.md
docs/extract/: get_github_log.md
docs/extractors/: get_github_log.md  overview.md
src/pystackt/: __init__.py
src/pystackt/exploration/: __init__.py  sql_statements.py
src/pystackt/exploration/graph/: __init__.py
src/pystackt/exploration/graph/dash_app/: __init__.py  callbacks.py  colormaps.py  (+3 more)
src/pystackt/exploration/stat_views/: __init__.py  sql_statements.py
src/pystackt/exporters/: __init__.py
src/pystackt/exporters/ocel2/: __init__.py  map_data.py  output_data.py
src/pystackt/exporters/promg/: __init__.py  map_data.py  output_data.py
src/pystackt/extractors/: __init__.py
src/pystackt/extractors/github/: __init__.py  class_definitions.py  get_data.py  initiate_types.py  map_data.py  output_data.py
src/pystackt/utils/: __init__.py
(+2 files in other folders)
